--- a/imaptitle.html
+++ b/imaptitle.html
@@ -23,7 +23,7 @@
 
 
 
-<p style="text-align: center;"><span style="font-size: 18;"><strong><strong><a href="https://f33228682ac46b5fe9efa6e102666a76da3774e9-webviewlink.googledrive.com/host/0BwYzYY1zY_QvSGY0cEkwUkFlQnc/index.html" target="_parent">Map Page</a> |&nbsp;<a href="https://56810f72bd1747533a461757a8bda1c176e392cc-webviewlink.googledrive.com/host/0BwYzYY1zY_QvfnNEbjZmMUV0YlVyUjdISWMyVlhXZ2F6eVdMd2NuZU9xTzh0NHVuRWJRVWM/" target="_blank">Work Flow</a>&nbsp;|&nbsp;<a href="https://www.facebook.com/audiovisualarchivetimorleste/app_198826126804423" target="_blank">User Login - Authorize Edit Table</a>&nbsp;|&nbsp;<a href="https://www.facebook.com/audiovisualarchivetimorleste/app_190322544333196" target="_blank">Preview Google Map Version</a>&nbsp;&nbsp;<a href="https://www.facebook.com/audiovisualarchivetimorleste/app_190322544333196" target="_blank"></a></strong>
+<p style="text-align: center;"><span style="font-size: 18;"><strong><strong><a href="https://timorleste.github.io/temperature/index.html" target="_parent">Map Page</a> |&nbsp;<a href="https://timorleste.github.io/audiovisualarchive/index.html" target="_blank">Work Flow</a>&nbsp;|&nbsp;<a href="https://www.facebook.com/audiovisualarchivetimorleste/app_198826126804423" target="_blank">User Login - Authorize Edit Table</a>&nbsp;|&nbsp;<a href="https://www.facebook.com/audiovisualarchivetimorleste/app_190322544333196" target="_blank">Preview Google Map Version</a>&nbsp;&nbsp;<a href="https://www.facebook.com/audiovisualarchivetimorleste/app_190322544333196" target="_blank"></a></strong>
 
 
 </center>
