--- a/imaptitle.html
+++ b/imaptitle.html
@@ -1,6 +1,6 @@
 <html xmlns :og="http://opengraphprotocol.org/schema/">
 <head>
-<title>Timor-Leste - Temperature</title>
+<title>Timor Leste - Temperature</title>
 
 <meta http-equiv="X-UA-Compatible" content="IE=8; IE=9">
 <meta name="language" content="en" />
@@ -12,7 +12,7 @@
 
 
 <meta name="author" content="timorleste@live.com - T">
-<meta name="description" content="Our mission is to help facilitate the newly independent East-Timor in accessing the voices and the key events in its past and fostering an understanding of its unique cultural heritage; to help unite and secure the identity of the country and its people; and to contribute to the forging of a new democratic nation. To ensure the survival of unique resources which contain and communicate the experience and the story of Timor-Leste and to place these at the service of peace and understanding, in Timor-Leste, Regionally and Internationally.">
+<meta name="description" content="Our mission is to help facilitate the newly independent Timor Leste in accessing the voices and the key events in its past and fostering an understanding of its unique cultural heritage; to help unite and secure the identity of the country and its people; and to contribute to the forging of a new democratic nation. To ensure the survival of unique resources which contain and communicate the experience and the story of Timor Leste and to place these at the service of peace and understanding, in Timor Leste, Regionally and Internationally.">
 <meta name="keywords" content="CAMSTL, East-Timor, Timor-Leste, Timor-Lorosae">
 </head>
 
