--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html xmlns :og="http://opengraphprotocol.org/schema/">
 <head>
-<title>Timor-Leste - Temperature</title>
+<title>Timor Leste - Temperature</title>
 
 <link rel="icon" 
       type="image/png" 
