--- a/map/m10000.html
+++ b/map/m10000.html
@@ -84,7 +84,7 @@
 <iframe src="https://docs.google.com/presentation/d/1s1ZpaE1xxrIZLX-NW-oEsThXtFx0WI2Roa3OGMsfnfw/embed?start=true&loop=true&delayms=3000" frameborder="2" width="868" height="400" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 
       
-<iframe src="https://docs.google.com/spreadsheets/d/1amTsXPO8kxYynEC42pCED75AwyugtnUFc_Q0DgIK9fE/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false">  width="100%" height="250px" </iframe>
+<iframe src="https://docs.google.com/spreadsheets/d/1amTsXPO8kxYynEC42pCED75AwyugtnUFc_Q0DgIK9fE/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
 
 
   <div align="center"> 
