--- a/att/et_distri_701_dbf12.html
+++ b/att/et_distri_701_dbf12.html
@@ -54,7 +54,7 @@
       <font face="Verdana, Arial, Helvetica, sans-serif" size="-1">
 
 
- <div class="fb-send" data-href="https://f33228682ac46b5fe9efa6e102666a76da3774e9-webviewlink.googledrive.com/host/0BwYzYY1zY_QvSGY0cEkwUkFlQnc/index.html"></div>    
+ <div class="fb-send" data-href="http://bit.ly/2hVaEX9"></div>    
 
 
 
