--- a/leg/legend.html
+++ b/leg/legend.html
@@ -33,7 +33,7 @@
 
 <tr><td align=left><img .></td>
 
-<div class="fb-send" data-href="https://f33228682ac46b5fe9efa6e102666a76da3774e9-webviewlink.googledrive.com/host/0BwYzYY1zY_QvSGY0cEkwUkFlQnc/index.html"></div>
+<div class="fb-send" data-href="https://timorleste.github.io/temperature/index.html"></div>
    
 
 
