--- a/att/et_distri_701_dbf5.html
+++ b/att/et_distri_701_dbf5.html
@@ -77,7 +77,7 @@
 <p style="text-align: left;"><span style="font-size: small;"><strong><strong>
  
  
-<p><a href="https://timorleste.github.io/aileu/" target="_blank"><b>[ Suco_Map ]</b></a></p>
+<p><a href="https://www.google.com/url?q=http://bit.ly/2xzDwOF&sa=D&ust=1522665867033000&usg=AFQjCNEOTik9J93NyedVdYtLUJ4X5hB8Mg" target="_blank"><b>[ Suco_Map ]</b></a></p>
 
 
 
