--- a/att/et_distri_701_dbf0.html
+++ b/att/et_distri_701_dbf0.html
@@ -33,7 +33,7 @@
   <tr>
     <td>
       <font face="Verdana, Arial, Helvetica, sans-serif"  size="-1">
-      Distr_name
+      District:
       </font>
     </td>
     <td bgcolor="#EBEBEB">
@@ -45,7 +45,7 @@
   <tr>
     <td>
       <font face="Verdana, Arial, Helvetica, sans-serif"  size="-1">
-      Temperature:
+      Temp:
       </font>
     </td>
     <td bgcolor="#EBEBEB">
