--- a/att/et_distri_701_dbf1.html
+++ b/att/et_distri_701_dbf1.html
@@ -40,7 +40,7 @@
   <tr>
     <td>
       <font face="Verdana, Arial, Helvetica, sans-serif"  size="-1">
-      Distr_name
+      District:
       </font>
     </td>
     <td bgcolor="#EBEBEB">
@@ -52,7 +52,7 @@
   <tr>
     <td>
       <font face="Verdana, Arial, Helvetica, sans-serif"  size="-1">
-      Temperature:
+      Temp:
       </font>
     </td>
     <td bgcolor="#EBEBEB">
